--- a/style.css
+++ b/style.css
@@ -1,23 +1,83 @@
-body {
-    background-color: darkgreen;
-    color: white;
+* {
+    box-sizing: border-box;
 }
 
-.hidden {
+
+body {
+    background-color: rgb(70, 49, 67);
+    color: white;
+    padding: 0;
+    margin: 0;
+     display: grid;
+    grid-template-columns: 3, 1fr;
+    grid-auto-rows:minmax(3, 2fr);
+    gap: 40px;
+     /* display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vh;
+    height: 100vh; */
+}
+
+.container {
+    width: 700px;
+    max-width: 70%;
+    height: 250px;
+    background-color: rgba(245, 245, 245, 0.322);
+    border-radius: 7px;
+    padding: 8px;
+     grid-column: 2;
+    grid-row: 2; 
+}
+
+.timeContainer {
+    margin: 0;
+    display: flex;
+    grid-column: 2;
+    grid-row: 1;
+    font-size: xx-large;
+}
+
+ .hidden { 
     display: none;
 }
-
-h1 {
-    text-align: center;
-}
-
-.Intro {
-    text-align: center;
-}
-
-.questionOpt {
+.btn-options {
     display: flex;
-    align-items: center;
     justify-content: center;
-    pad: 15%;
+    align-items: center;
+    margin:5px;
+    padding: 10px;
+    gap:5px;
+}
+
+.btn {
+    border: 2px solid aqua;
+    background-color: blue;
+    color: white;
+    padding: 10px;
+    border-radius: 20px;
+    cursor: pointer;
+}
+
+.btn:hover {
+background-color: white;
+color:darkblue;
+}
+
+.quizNavigationBtn {
+    height: 50px;
+    width:600px;
+    /* display: grid;
+    grid-template-rows: 3, 1fr;
+    gap: 5px; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#question {
+    color: rgb(251, 251, 251);
+    display: flex;
+    justify-content: center;
+    font-size: x-large;
 }
